prusti/tests/pass/parse/pledges.stderr
Verification of 6 items...
error: [Prusti: verification error] statement might panic
  --> $DIR/pledges.rs:33:5
   |
33 |     assert!(a.f == 6);
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

Verification failed
error: aborting due to previous error

